<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/bannerprofle"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/userpbg"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/profilimg" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/bannerprofle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editProfile"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:text="@string/title_text_userprofile_edit_details"
            android:textColor="@color/green_primary"
            android:textStyle="bold"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profiledeatils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/buttonEdit"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:inputType="text"
            android:hint="@string/title_Login_screen_username_input_hint"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/dob"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:inputType="date"

            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="10dp"
            android:hint="@string/title_Signup_screen_dateOfBirth_input_hint"/>

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/title_Signup_screen_email_input_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewActivities"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/profiledeatils"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/primary_button"
        android:text="@string/text_userprofile_activities_view_activities"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>