<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBlogActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_form_create_blog_heading"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/profiledeatils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/heading"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/blogTitle"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:inputType="text"
            android:hint="@string/hint_form_create_post_input_title"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_menu_book_24"
            android:drawablePadding="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/blogImageInput"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
            android:drawablePadding="10dp"
            android:hint="Select your blog image"/>

        <EditText
            android:id="@+id/blogTagsInput"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="50dp"
            android:background="#40C5B9B9"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/bi_tag"
            android:drawablePadding="10dp"
            android:hint="@string/hint_form_create_post_input_tags"/>

        <EditText
            android:id="@+id/blogDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="20dp"
            android:background="#40C5B9B9"
            android:drawableLeft="@drawable/ic_baseline_insert_drive_file_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_form_create_post_input_description"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createBLogButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/profiledeatils"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/primary_button"
        android:text="@string/button_form_create_blog_submit"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background= "@drawable/container_bg"
        app:menu="@menu/bottom_nav_menu"/>
</RelativeLayout>