<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/createmealbg"
    tools:context=".EditMealPlanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70000000" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/meal_main_heading"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/breakfast_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/bfastinput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/green_secondary"
            android:drawableLeft="@drawable/ic_baseline_restaurant_menu_24"
            android:drawablePadding="10dp"
            android:hint="@string/meal_hint_breakfast"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/double_inputs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/bfastinput"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_type"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_quantity"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/double_inputs"
            android:layout_marginTop="10dp"
            android:background="#40D9D9D9"
            android:hint="@string/meal_hint_description"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lunchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/breakfast_field"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/lunchInput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/green_secondary"
            android:drawableLeft="@drawable/ic_baseline_fastfood_24"
            android:drawablePadding="10dp"
            android:hint="@string/meal_hint_lunch"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/double_inputs_lunch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/lunchInput"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_type"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_quantity"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/double_inputs_lunch"
            android:layout_marginTop="10dp"
            android:background="#40D9D9D9"
            android:hint="@string/meal_hint_description"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dinner_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lunchField"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/dinnerInput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/green_secondary"
            android:drawableLeft="@drawable/dinnervector"
            android:drawablePadding="10dp"
            android:hint="@string/meal_hint_dinner"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/double_inputs_dinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/dinnerInput"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_type"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="#40D9D9D9"
                android:paddingStart="20dp"
                android:text="@string/meal_hint_food_quantity"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/double_inputs_dinner"
            android:layout_marginTop="10dp"
            android:background="#40D9D9D9"
            android:hint="@string/meal_hint_description"
            android:paddingStart="20dp"
            android:textColorHint="@color/white" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/dinner_field"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/primary_button"
        android:text="@string/meal_button_edit_plan"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>